--- a/arch/arm/mach-msm/lge/Kconfig
+++ b/arch/arm/mach-msm/lge/Kconfig
@@ -10,6 +10,13 @@ config MACH_MSM8926_G2M_GLOBAL
     help
       Support for the Qualcomm MSM8926 G2M GLOBAL device.
 
+config MACH_MSM8226_G2MDS_GLOBAL
+    depends on ARCH_MSM8226
+    select MACH_LGE
+    bool "MSM8226 G2MDS GLOBAL"
+    help
+      Support for the Qualcomm MSM8226 G2MDS GLOBAL device.
+
 config LCD_LGIT_VIDEO_WXGA
 	depends on ARCH_MSM8226
 	select MACH_LGE
